
= rufus-rtm CHANGELOG.txt


== rufus-rtm - 0.1.3    released 2010/01/24

- removed ugly World.include(Rufus::Verbs) (shame on me)
- ruby 1.9.x friendly
- removed evil "require 'rubygems'" from rufus/rtm/base.rb
- can now pass rtm key and secret via method params (Giorgio's request)


== rufus-rtm - 0.1    released 2008/02/14

- initial release
