@@ -1,2 +1,3 @@
-html/
 .yardoc/
+html/
+pkg/
