@@ -1,7 +1,7 @@
 
 
 $: << File.join( File.dirname(__FILE__), "lib" )
-require 'rufus/rtm/base'
+require 'milk_cap/rtm/base'
 
 require 'rubygems'
 require 'rake'
@@ -22,24 +22,22 @@ require 'jeweler'
 
 Jeweler::Tasks.new do |gem|
 
-  gem.version = Rufus::RTM::VERSION
-  gem.name = 'rufus-rtm'
+  gem.version = MilkCap::RTM::VERSION
+  gem.name = 'milk_cap'
   gem.summary = 'yet another RememberTheMilk wrapper'
 
   gem.description = %{
     yet another RememberTheMilk wrapper
   }
-  gem.email = 'jmettraux@gmail.com'
-  gem.homepage = 'http://github.com/jmettraux/rufus-rtm/'
-  gem.authors = [ 'John Mettraux' ]
-  gem.rubyforge_project = 'rufus'
+  gem.email = 'jeff.leverenz@gmail.com'
+  gem.homepage = 'http://github.com/jleverenz/milk_cap/'
+  gem.authors = [ 'John Mettraux', 'Jeff Leverenz' ]
+  gem.licenses = 'MIT'
 
   gem.test_file = 'test/test.rb'
 
   gem.add_dependency 'rufus-verbs', '>= 1.0.0'
   gem.add_development_dependency 'yard', '>= 0'
-
-  # gemspec spec : http://www.rubygems.org/read/chapter/20
 end
 Jeweler::GemcutterTasks.new
 
@@ -53,8 +51,8 @@ begin
 
   YARD::Rake::YardocTask.new do |doc|
     doc.options = [
-      '-o', 'html/rufus-rtm', '--title',
-      "rufus-rtm #{Rufus::RTM::VERSION}"
+      '-o', 'html/milk_cap', '--title',
+      "milk_cap #{MilkCap::RTM::VERSION}"
     ]
   end
 
@@ -63,16 +61,4 @@ rescue LoadError
   task :yard do
     abort "YARD is not available : sudo gem install yard"
   end
-end
-
-
-#
-# TO THE WEB
-
-task :upload_website => [ :clean, :yard ] do
-
-  account = 'jmettraux@rubyforge.org'
-  webdir = '/var/www/gforge-projects/rufus'
-
-  sh "rsync -azv -e ssh html/rufus-rtm #{account}:#{webdir}/"
 end
