@@ -1,4 +1,0 @@
-
-[ ] use rufus-json
-[ ] use rufus-jig (patron, ...)
-
