@@ -1,6 +1,4 @@
 #--
-# Copyright (c) 2008-2010, John Mettraux, jmettraux@gmail.com
-#
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
 # in the Software without restriction, including without limitation the rights
@@ -45,10 +43,10 @@ rescue LoadError # ruby 1.9.x
 end
 
 
-module Rufus
+module MilkCap
 module RTM
 
-  VERSION = '0.1.3'
+  VERSION = '0.5.0'
 
   AUTH_ENDPOINT = "http://www.rememberthemilk.com/services/auth/"
   REST_ENDPOINT = "http://api.rememberthemilk.com/services/rest/"
@@ -105,4 +103,3 @@ module RTM
 
 end
 end
-
