@@ -1,6 +1,4 @@
 #--
-# Copyright (c) 2008-2010, John Mettraux, jmettraux@gmail.com
-#
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
 # in the Software without restriction, including without limitation the rights
@@ -23,7 +21,7 @@
 #++
 
 
-module Rufus::RTM
+module MilkCap::RTM
 
   def self.auth_get_frob #:nodoc:
 
@@ -100,4 +98,3 @@ couldn't get auth token, please retry...
   end
 
 end
-
