@@ -1,0 +1,56 @@
+# Generated by jeweler
+# DO NOT EDIT THIS FILE DIRECTLY
+# Instead, edit Jeweler::Tasks in Rakefile, and run 'rake gemspec'
+# -*- encoding: utf-8 -*-
+# stub: milk_cap 0.5.0 ruby lib
+
+Gem::Specification.new do |s|
+  s.name = "milk_cap"
+  s.version = "0.5.0"
+
+  s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
+  s.authors = ["John Mettraux", "Jeff Leverenz"]
+  s.date = "2013-12-31"
+  s.description = "\n    yet another RememberTheMilk wrapper\n  "
+  s.email = "jeff.leverenz@gmail.com"
+  s.extra_rdoc_files = [
+    "LICENSE.txt",
+    "README.rdoc"
+  ]
+  s.files = [
+    "CHANGELOG.txt",
+    "LICENSE.txt",
+    "README.rdoc",
+    "Rakefile",
+    "lib/milk_cap.rb",
+    "lib/milk_cap/rtm.rb",
+    "lib/milk_cap/rtm/base.rb",
+    "lib/milk_cap/rtm/credentials.rb",
+    "lib/milk_cap/rtm/resources.rb",
+    "milk_cap.gemspec",
+    "test/tasks_test.rb",
+    "test/test.rb"
+  ]
+  s.homepage = "http://github.com/jleverenz/milk_cap/"
+  s.licenses = ["MIT"]
+  s.require_paths = ["lib"]
+  s.rubygems_version = "2.1.11"
+  s.summary = "yet another RememberTheMilk wrapper"
+  s.test_files = ["test/test.rb"]
+
+  if s.respond_to? :specification_version then
+    s.specification_version = 4
+
+    if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
+      s.add_runtime_dependency(%q<rufus-verbs>, [">= 1.0.0"])
+      s.add_development_dependency(%q<yard>, [">= 0"])
+    else
+      s.add_dependency(%q<rufus-verbs>, [">= 1.0.0"])
+      s.add_dependency(%q<yard>, [">= 0"])
+    end
+  else
+    s.add_dependency(%q<rufus-verbs>, [">= 1.0.0"])
+    s.add_dependency(%q<yard>, [">= 0"])
+  end
+end
+
