@@ -1,62 +1,0 @@
-# Generated by jeweler
-# DO NOT EDIT THIS FILE DIRECTLY
-# Instead, edit Jeweler::Tasks in Rakefile, and run the gemspec command
-# -*- encoding: utf-8 -*-
-
-Gem::Specification.new do |s|
-  s.name = %q{rufus-rtm}
-  s.version = "0.1.3"
-
-  s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
-  s.authors = ["John Mettraux"]
-  s.date = %q{2010-01-24}
-  s.description = %q{
-    yet another RememberTheMilk wrapper
-  }
-  s.email = %q{jmettraux@gmail.com}
-  s.extra_rdoc_files = [
-    "LICENSE.txt",
-     "README.txt"
-  ]
-  s.files = [
-    "CHANGELOG.txt",
-     "LICENSE.txt",
-     "README.txt",
-     "Rakefile",
-     "TODO.txt",
-     "lib/rufus-rtm.rb",
-     "lib/rufus/rtm.rb",
-     "lib/rufus/rtm/base.rb",
-     "lib/rufus/rtm/credentials.rb",
-     "lib/rufus/rtm/resources.rb",
-     "rufus-rtm.gemspec",
-     "test/tasks_test.rb",
-     "test/test.rb"
-  ]
-  s.homepage = %q{http://github.com/jmettraux/rufus-rtm/}
-  s.rdoc_options = ["--charset=UTF-8"]
-  s.require_paths = ["lib"]
-  s.rubyforge_project = %q{rufus}
-  s.rubygems_version = %q{1.3.5}
-  s.summary = %q{yet another RememberTheMilk wrapper}
-  s.test_files = [
-    "test/test.rb"
-  ]
-
-  if s.respond_to? :specification_version then
-    current_version = Gem::Specification::CURRENT_SPECIFICATION_VERSION
-    s.specification_version = 3
-
-    if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<rufus-verbs>, [">= 1.0.0"])
-      s.add_development_dependency(%q<yard>, [">= 0"])
-    else
-      s.add_dependency(%q<rufus-verbs>, [">= 1.0.0"])
-      s.add_dependency(%q<yard>, [">= 0"])
-    end
-  else
-    s.add_dependency(%q<rufus-verbs>, [">= 1.0.0"])
-    s.add_dependency(%q<yard>, [">= 0"])
-  end
-end
-
