@@ -1,5 +1,9 @@
 
-= rufus-rtm CHANGELOG.txt
+= milk_cap CHANGELOG.txt
+
+== milk_cap - 0.5.0    not yet released
+
+- rufus-rtm is now milk_cap: updated docs, contacts, gemspec, etc
 
 
 == rufus-rtm - 0.1.3    released 2010/01/24
@@ -13,4 +17,3 @@
 == rufus-rtm - 0.1    released 2008/02/14
 
 - initial release
-
